--- a/index.html
+++ b/index.html
@@ -87,7 +87,12 @@
     <footer>
       <div class="ticker-wrap">
         <div class="ticker">
-          <p>June 21, <span>2019</span></p>
+          <span class="dates">
+            <p>June 21, <span>2019</span></p>
+            <p>June 21, <span>2019</span></p>
+            <p>June 21, <span>2019</span></p>
+            <p>June 21, <span>2019</span></p>
+          </span>
         </div>
       </div>
       <section>
